[gd_scene load_steps=4 format=3 uid="uid://xx2dujrjabep"]

[ext_resource type="Texture2D" uid="uid://c0jvuuxjq06wm" path="res://RiddlePuzzle/AssetsforRiddle/MenuBackground.png" id="1_38hy4"]
[ext_resource type="Script" path="res://RiddlePuzzle/Scenes/Paper.gd" id="2_gyel5"]
[ext_resource type="FontFile" uid="uid://bt4q418jqc5fc" path="res://RiddlePuzzle/AssetsforRiddle/m5x7.ttf" id="3_ect5o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Paper" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.5
offset_top = -245.0
offset_right = 213.5
offset_bottom = 245.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_38hy4")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource("2_gyel5")

[node name="VBoxContainer" type="VBoxContainer" parent="Paper"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -193.0
offset_right = 193.0
offset_bottom = 397.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Paper/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 25
text = "
I've been watching you, tracing the contours
of your journey with keen interest. Every 
step you've taken, every choice you've madeâ€”I've 
been there, silently observing from the shadows.

Now complete this riddle to enter the next stage.

I speak without a mouth and hear without ears.
I have no body, but I come alive with the wind.
What am I?"

[node name="Fire" type="CheckButton" parent="Paper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.984314, 0.227451, 0.152941, 1)
theme_override_colors/font_hover_color = Color(0.984314, 0.227451, 0.152941, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 35
text = "Fire"

[node name="Echo" type="CheckButton" parent="Paper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.866667, 0.447059, 0.188235, 1)
theme_override_colors/font_hover_color = Color(0.866667, 0.447059, 0.188235, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 35
text = "Echo"

[node name="Shadow" type="CheckButton" parent="Paper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.113725, 0.176471, 0.207843, 1)
theme_override_colors/font_hover_color = Color(0.113725, 0.176471, 0.207843, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 35
text = "Shadow"

[node name="Lightning" type="CheckButton" parent="Paper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.317647, 0.564706, 0.556863, 1)
theme_override_colors/font_hover_color = Color(0.317647, 0.564706, 0.556863, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 35
text = "Lightning"

[node name="Check" type="Button" parent="Paper/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.968627, 0.968627, 0.968627, 1)
theme_override_fonts/font = ExtResource("3_ect5o")
theme_override_font_sizes/font_size = 33
text = "Check your answer."

[connection signal="pressed" from="Paper/VBoxContainer/Fire" to="Paper" method="_on_fire_pressed"]
[connection signal="pressed" from="Paper/VBoxContainer/Echo" to="Paper" method="_on_echo_pressed"]
[connection signal="pressed" from="Paper/VBoxContainer/Shadow" to="Paper" method="_on_shadow_pressed"]
[connection signal="pressed" from="Paper/VBoxContainer/Lightning" to="Paper" method="_on_lightning_pressed"]
[connection signal="pressed" from="Paper/VBoxContainer/Check" to="Paper" method="_on_check_pressed"]
